plugins {
    id 'java'
    id "com.github.johnrengelman.shadow" version "7.1.0"
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.0.10'
}

group 'de.blitzgames'
version '1.0.1'

repositories {
    mavenCentral()
    maven { url 'https://oss.sonatype.org/content/repositories/snapshots' }
    maven { url "https://plugins.gradle.org/m2/" }
}


dependencies {
    implementation 'org.xerial:sqlite-jdbc:3.36.0.2'
    implementation 'org.openjfx:javafx-plugin:0.0.10'
    implementation 'org.openjfx:javafx:17.0.0.1'
    implementation 'org.json:json:20210307'
    implementation 'org.jetbrains:annotations:22.0.0'
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
}

apply plugin: 'java'
apply plugin: "com.github.johnrengelman.shadow"
apply plugin: 'org.openjfx.javafxplugin'

sourceCompatibility = JavaVersion.VERSION_11
targetCompatibility = JavaVersion.VERSION_11


javafx {
    version = "17"
    modules = ['javafx.controls', 'javafx.fxml']
}

mainClassName = 'de.thundergames.MoleGames'
test {
    useJUnitPlatform()
}